# ChangeLog for net-nds/nsscache
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nds/nsscache/ChangeLog,v 1.2 2009/03/18 22:58:52 robbat2 Exp $

  18 Mar 2009; Robin H. Johnson <robbat2@gentoo.org> nsscache-0.8.3.ebuild:
  Install docs and add ~x86.

*nsscache-0.8.3 (18 Mar 2009)

  18 Mar 2009; Alec Warner <antarus@gentoo.org>
  +files/nsscache.conf.default, +nsscache-0.8.3.ebuild:
  iniital import of nsscache
