@@ -1,5 +1,5 @@
 AUX nsscache.conf 2695 RMD160 77e2ed85ec57b7314eb890e0fb42a86de5ebcfe6 SHA1 05c2bd63f4877443647248b8616d3f16f9667ea3 SHA256 86babb59fde997095625e9594668c0d52f7d779b2aae964f2ec1d10b71a84772
 DIST nsscache-0.8.3.tar.gz 72612 RMD160 27c3a74488ebef68d9591efb9bd6789a2ab72b26 SHA1 23057a22407a7d6bee9a9ac2ac4c38ee8b295af9 SHA256 452037c5859aad13f3bfc123db1f9d02211ebbcb9b1073a73a2e1f783c5c2c2a
 EBUILD nsscache-0.8.3.ebuild 783 RMD160 70a00b4773b1e70c463f827f2a633f0784c1da05 SHA1 444579aed70eab4367cc78ed8d457957a934e3fe SHA256 7fe401cadc2302317be22ad27fd309cfe1969cd797bd039a34118d2a2df55d1d
-MISC ChangeLog 477 RMD160 f551af7f6212fe9e4c37d68c1e562f49e3b5c65e SHA1 12a0eb9bbb02f4f8b492682a89816263d9635fdd SHA256 eb09b370743e924b1eabb91c9e15c75ed045bcf0dbec5e8a729a3e7c34328ee7
-MISC metadata.xml 350 RMD160 a41b0b9f71c20798d42b943971e02731eb25c3a9 SHA1 de77b0648df1d834a5a3a883dfef336f86edd18b SHA256 95ac973b3deadfc722ddf2173a1744d728a61d766aaee96d53b4de9bb10217f9
+MISC ChangeLog 610 RMD160 02c724e96085af8cfe6ac7dcba6063235bf3c3da SHA1 93f7ab09c1813f7f7655ed593898fea4b47a722c SHA256 5c4a56464bc0d7a8a09065af65a00db206f12651c09d2cd721cf2fc24b45a77e
+MISC metadata.xml 403 RMD160 d9fd93f79826495f7c41ff10c04638eb02f70975 SHA1 f957d7361bb6562c38a269ac137e0ed130f2811a SHA256 b88c7b2df5a1f8c4ca0448a8d9102f56319361624c9351e5b9f5a875023dff4f
