@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>maintainer-needed</herd>
+	<herd>no-herd</herd>
+<maintainer>
+  <email>robbat2@gentoo.org</email>
+</maintainer>
 	<use>
 	  <flag name="nssdb">Depend on sys-libs/libnss_db to handle dbm files.</flag>
 	  <flag name="nsscache">Depend on sys-auth/libnss-cache to handle flat files</flag>
