@@ -1,6 +1,9 @@
 # ChangeLog for net-nds/nsscache
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/nsscache/ChangeLog,v 1.2 2009/03/18 22:58:52 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nds/nsscache/ChangeLog,v 1.3 2009/05/22 04:23:17 robbat2 Exp $
+
+  22 May 2009; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
+  Taking over maintenance of this as we use it heavily in infra.
 
   18 Mar 2009; Robin H. Johnson <robbat2@gentoo.org> nsscache-0.8.3.ebuild:
   Install docs and add ~x86.
